# sethmdoty.github.io

./: .gitignore  CNAME  about.rst  conf.py  index.rst  noxfile.py  pyproject.toml  requirements.txt  resume.rst
.doctrees/: about.doctree  environment.pickle  index.doctree
.doctrees/blog/2022/: 2022-04-15.doctree
.doctrees/posts/2022/: 2022-04-15.doctree
.github/workflows/: deploy.yml
_templates/: aboutme.html
_website/: .buildinfo  index.html  objects.inv  searchindex.js
_website/_sources/posts/2022/: 2022-04-15.rst.txt
_website/_static/: custom.css
_website/about/: index.html
_website/blog/: atom.xml  index.html  social.xml
_website/blog/2022/: index.html
_website/blog/2022/2022-04-15/: index.html
_website/blog/archive/: index.html
_website/blog/author/: index.html
_website/blog/author/sdoty/: index.html
_website/blog/category/: index.html
_website/blog/category/category-one/: index.html
_website/blog/drafts/: index.html
_website/blog/tag/: index.html
_website/blog/tag/bender/: index.html
_website/blog/tag/dating/: index.html
_website/blog/tag/futurama/: index.html
_website/blog/tag/humans/: index.html
_website/genindex/: index.html
_website/posts/2022/2022-04-15/: index.html
_website/search/: index.html
posts/2022/: 2022-04-15.rst  2022-09-18.md
