[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Seth Doty <sdoty@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sphinx-panels = "^0.6.0"
ablog = "^0.10.23"
pydata-sphinx-theme = "^0.8.0"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
sphinx-sitemap = "^2.2.0"
sphinx_fontawesome = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

